fixed windows z-index error (I think😛)

--- a/webdesktop/src/components/Main.scss
+++ b/webdesktop/src/components/Main.scss
@@ -11,9 +11,9 @@
 
   overflow: hidden;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
 
   box-shadow: inset 0 0 20px 10px rgba(0, 0, 0, 0.4);
   position: relative;
