--- a/webdesktop/src/components/Windows/Window.scss
+++ b/webdesktop/src/components/Windows/Window.scss
@@ -1,6 +1,7 @@
 .window {
   background-color: var(--window_bg);
   padding: 0.125rem;
+  position: relative;
   // width: 100%;
   // height: 100%;
 
